<resources>
    <string name="app_name">Helsinki Events</string>
    <string name="app_creator">Michael Neu</string>
    <string name="splash_app_name">Helsinki\nEvents</string>
    <string name="refresh_events">Refresh events</string>
    <string name="error_network_connection">Network error</string>
    <string name="search_results">Search results</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="about_content">
        This application is the final project of the course "App Development for Android Smartphones"
        at the OTH Regensburg. It\'s built using only basic Android and support library features.
        The displayed events are queried using the linked events API provided by the city of Helsinki.
        \n
        \n
        \n

        The app implements all features from the specification:
        \n
        \n

        1)\t Search events
        \n

        2)\t Autocomplete in search and filters
        \n

        3)\t Custom adapters
        \n

        4)\t Detailed information about events
        \n

        5)\t Show event location on a map
        \n

        6)\t Show images of the event
        \n

        7)\t Use pagination of the API to display all elements
        \n

        8)\t Show a splash screen with the developer\'s name
        \n

        9)\t Contains an About activity
    </string>
    <string name="show_event_filters">Show event filters</string>
    <string name="hide_event_filters">Hide event filters</string>
    <string name="place">Place</string>
    <string name="keyword">Keyword</string>
    <string name="date">Date</string>
    <string name="today">today</string>
    <string name="more_information">More information</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="free">FREE</string>
    <string name="offers">Offers</string>
</resources>
